<resources>
    <string name="app_name">Money Flow Notes</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="revenue">Income</string>
    <string name="expenditure">Outcome</string>
    <string name="description">Description</string>
    <string name="enter_amount_of_money">Enter amount of money</string>
    <string name="save">SAVE</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="balance">Total Balance</string>
    <string name="all">ALL SHOW</string>
    <string name="money_list_kas">100.000</string>
    <string name="desc_list_kas">Beli nasi padang</string>
    <string name="date_list_kas">28 August 2022</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="type_data_list_kas">Income</string>
    <string name="one_item_selected"> One Item Selected</string>
    <string name="items_selected">  Items Selected</string>
</resources>